skirmish.css
body {
    margin: 0px; /*Unsetting browser default margin of 8px*/
}

}

/* |||||||||||||||||||||||||||||||||| Screen begin*/
#sidepanel {
    min-width: 80px;
    width: 7%;
    height: 120vh;
    position: absolute;
    left: 0%;
    border-right: "1px solid #000000";
}

#map {
    height:120vh;
    width: 93%;
    max-width: calc(100% - 80px);
    position: absolute;
    right: 0%;
}



/*Screen theming begin*/
.LightMode #map {
    background-color: #FFFFFF;
}
.LightMode #sidepanel {
    background-color: #FFFFFF;
}

.DarkMode1 #map {
    background-color: #353b45;
}
.DarkMode1 #sidepanel {
    background-color: #21252b;
}

.DarkMode2 #map {
    background-color: #33393B;
}
.DarkMode2 #sidepanel {
    background-color: #232729;
}
/*Screen theming end*/
/* |||||||||||||||||||||||||||||||||| Screen end*/




/* |||||||||||||||||||||||||||||||||| Buttons begin*/
#Buttons {
    width: 100%;
    display: flex;
    flex-flow: row wrap;
    overflow: hidden;
}

#DarkMode1Button {
    order:1;
    flex-grow: 1;
    display: none;
}

#DarkMode2Button {
    order:1;
    flex-grow: 1;
    display: none;
}

#LightModeButton {
    order:1;
    flex-grow: 1;
    display: none;
}


#SpawnRedButton {
    order:2;
    flex-grow:1;
}

#SpawnBlueButton {
    order:3;
    flex-grow:1;
}



/*Buttons theming begin*/
.LightMode  #DarkMode1Button {
    display: block;
}
.DarkMode1 .DarkMode2 #DarkMode1Button {
    display: none;
}

.DarkMode1 #DarkMode2Button {
    display: block;
}
.DarkMode2 .LightMode #DarkMode2Button {
    display: none;
}

.DarkMode2 #LightModeButton {
    display: block;
}
.LightMode .DarkMode1 #LightModeButton {
    display: none;
}
/*Buttons theming end*/
/* |||||||||||||||||||||||||||||||||| Buttons end*/




/* |||||||||||||||||||||||||||||||||| Blobs begin*/
.Spawner {
    width: 80px;
    height: 80px;
}

.Blob {
    border-radius: 50%;
    position: absolute;
}

.Blue {
    background: #0000FF;
}

.Red {
    background: #ff0000;
}

.SmallBlob {
    height: 20px;
    width: 20px;
    transition: left 2s, right 2s, top 2s, bottom 2s linear;
}


#RedSpawner {
    top: 15%;
    left: 15%;
}

#RedBlob1 {
    top: 4%;
    left: 3%;
}

#RedBlob2 {
    top: 20%;
    left: 3%;
}

#RedBlob3 {
    top: 55%;
    left: 45%;
}

#RedBlob4 {
    top: 50%;
    left: 55%;
}

#RedBlob5 {
    top: 40%;
    left: 45%;
}

#RedBlob6 {
    top: 70%;
    left: 65%;
}

#RedBlob7 {
    top: 50%;
    left: 75%;
}

#RedBlob8 {
    top: 35%;
    left: 85%;
}

#BlueSpawner {
    top: 85%;
    left: 85%;
}

#BlueBlob1 {
    top: 96%;
    left: 97%;
}

#BlueBlob2 {
    top: 45%;
    left: 55%;
}

#BlueBlob3 {
    top: 80%;
    left: 75%;
}

#BlueBlob4 {
    top: 15%;
    left: 65%;
}

#BlueBlob5 {
    top: 65%;
    left: 20%;
}

#BlueBlob6 {
    top: 70%;
    left: 85%;
}

/*Blobs theming begin*/
.LightMode .Blob:hover, .LightMode .SelectedP1, .LightMode .SelectedP2 {
    border: 1px solid #000000;
}

.DarkMode1 .Blob:hover, .DarkMode1 .SelectedP1, .DarkMode1 .SelectedP2 {
    border: 1.5px solid #000000;
}

.DarkMode2 .Blob:hover, .DarkMode2 .SelectedP1, .DarkMode2 .SelectedP2 {
    border: 1.5px solid #000000;
}
/*Blobs theming end*/
/* |||||||||||||||||||||||||||||||||| Blobs end*/

